# borsa-mcp

./: .dockerignore  .gcloudignore  .gitignore  CLAUDE.md  Dockerfile  MIGRATION.md  README.md  app.py  array_format_optimizer.py  asgi_app.py  borsa_client.py  borsa_mcp_server.py  borsa_models.py  compact_json_optimizer.py  deploy-cloudrun.sh  fly.toml  pyproject.toml  requirements.txt  token_optimizer.py  unified_mcp_server.py  verify_tier2_data.py
.serena/: project.yml
docs/: us_stock_tech_analysis.md
docs/superpowers/plans/: 2026-06-12-llm-ux-and-cleanup.md  2026-07-02-markdown-output.md  2026-07-11-usd-eur-inflation.md  2026-07-12-canonical-series-layer.md
docs/superpowers/specs/: 2026-06-12-llm-ux-and-cleanup-design.md  2026-07-02-markdown-output-design.md  2026-07-11-usd-eur-inflation-design.md  2026-07-12-tool-consolidation-design.md
models/: __init__.py  base.py  btcturk_models.py  buffett_models.py  calendar_models.py  coinbase_models.py  evds_models.py  financial_ratios_models.py  mynet_models.py  scanner_models.py  tcmb_models.py  tefas_models.py  unified_base.py  us_markets_models.py  yfinance_models.py
providers/: asset_resolver.py  borsapy_calendar_provider.py  borsapy_evds_provider.py  borsapy_fx_provider.py  borsapy_provider.py  borsapy_scanner_provider.py  btcturk_provider.py  buffett_analyzer_provider.py  canonical_series.py  coinbase_provider.py  compare.py  dovizcom_auth.py  dovizcom_calendar_provider.py  dovizcom_legacy_provider.py  dovizcom_provider.py  dovizcom_tahvil_provider.py  dynamic_stock_discovery.py  dynamic_ticker_discovery.py  enhanced_screener.py  financial_ratios_provider.py  fred_cpi_provider.py  isyatirim_provider.py  kap_provider.py  markdown_renderer.py  market_router.py  market_scanner.py  mynet_provider.py  response_shaper.py  simple_dynamic_discovery.py  tcmb_provider.py  technical_indicators.py  tefas_provider.py  us_markets_provider.py  worldbank_provider.py  yahoo_calendar_provider.py  yfinance_provider.py  yfscreen_provider.py
tests/: test_asset_resolution.py  test_bist_retry.py  test_canonical_series.py  test_canonical_series_live.py  test_compare_assets.py  test_error_contract.py  test_final_honesty.py  test_fred_cpi_calculation.py  test_fred_cpi_fallback.py  test_fred_cpi_provider.py  test_history_contract.py  test_http_client_lifecycle.py  test_macro_region_routing.py  test_macro_tool_surface.py  test_macro_tr_errors.py  test_macro_tr_numbers.py  test_markdown_renderer.py  test_multi_ticker_fanout.py  test_news_detail.py  test_param_validation.py  test_parameter_contract.py  test_pe_fallback.py  test_phase0_live_bugs.py  test_quote_fields.py  test_response_shaper.py  test_server_smoke.py  test_tool_merges.py
