[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "borsa-mcp"
version = "0.7.0"
description = "A modular MCP Server for Borsa Istanbul (BIST) data using KAP and Yahoo Finance."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.6.0",
    "pydantic>=2.7.0",
    "httpx>=0.27.0",
    "pdfplumber>=0.11.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.2.0",
    "yfinance>=0.2.37",
    "pandas>=2.0.0",
    "markitdown>=0.1.1",
    "openpyxl>=3.1.5",
    "requests>=2.31.0",
]

[project.scripts]
borsa-mcp = "borsa_mcp_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["providers*", "models*"]

[tool.setuptools]
py-modules = ["borsa_mcp_server", "borsa_client", "borsa_models", "fon_mevzuat_kisa"]
include-package-data = true
