[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "borsa-mcp"
version = "0.7.0"
description = "A modular MCP Server for Borsa Istanbul (BIST) data using KAP and Yahoo Finance."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.6.0",
    "pydantic>=2.7.0",
    "httpx>=0.27.0",
    "requests>=2.31.0",
    "urllib3>=2.4.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.2.0",
    "yfinance>=0.2.37",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "openpyxl>=3.1.5",
    "pdfplumber>=0.11.0",
    "markitdown>=0.1.1",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "python-dateutil>=2.8.2",
    "pytz>=2024.1",
    "certifi>=2024.0.0",
    "multitasking>=0.0.11",
    "peewee>=3.17.0",
    "frozendict>=2.3.0",
]

[project.scripts]
borsa-mcp = "borsa_mcp_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["providers*", "models*"]

[tool.setuptools]
py-modules = ["borsa_mcp_server", "borsa_client", "borsa_models", "fon_mevzuat_kisa", "token_optimizer", "compact_json_optimizer", "array_format_optimizer"]
include-package-data = true
